Revert "Added code to return a selected Note if selected from the side panel." HTML page does not render This reverts commit c5a04085b93fd34c52752642a621fc28801dad8a.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Main pane -->
     <section class="main">
-      <textarea v-model="selectedNote.content"></textarea>
+      <textarea v-model="content"></textarea>
     </section>
 
     <!-- Preview pane -->
