--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- <script src="https://unpkg.com/marked"></script> -->
   <script src="./vue.js"></script>
   <script src="./marked.min.js"></script>
+  <script src="./moment.js"></script>
 
   <!-- Notebook app -->
   <div id="notebook">
@@ -39,6 +40,13 @@
         </div>
 
         <textarea v-model="selectedNote.content"></textarea>
+        <div class="toolbar status-bar">
+          <span class="date">
+            <span class="label">Created</span>
+            <!-- date is a Vue filter -->
+            <span class="value">{{ selectedNote.created | date }}</span>
+          </span>
+        </div>
       </section>
 
       <!-- Preview pane -->
