--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
             <!-- date is a Vue filter -->
             <span class="value">{{ selectedNote.created | date }}</span>
           </span>
+          <span class="lines">
+            <span class="label">Lines</span>
+            <span class="value">{{ linesCount }}</span>
+          </span>
+          <span class="words">
+            <span class="label">Words</span>
+            <span class="value">{{ wordsCount }}</span>
+          </span>
+          <span class="characters">
+            <span class="label">Characters</span>
+            <span class="value">{{ charactersCount }}</span>
+          </span>
         </div>
       </section>
 
@@ -55,7 +67,7 @@
       </aside>
     </template>
 
-  </div>
+  </div> <!-- end of notebook -->
   <!-- Some JavaScript -->
   <script src="script.js"></script>
 </body>
